clang/test/BSC/Negative/Ownership/Owned/owned_pointer_owned_struct/owned_pointer_owned_struct.cbs
// RUN: %clang_cc1 -verify %s

_Safe T* _Owned safe_malloc<T>(T);
_Safe void safe_free(void* _Owned);

_Owned struct Test {
_Public:
    int *_Owned t;
    ~Test(This this)
    {
        safe_free((void* _Owned)this.t);
    }
};

_Safe void test_normal_struct_move1(Test* _Owned pt) {
    safe_free((void *_Owned)pt->t);
    safe_free((void *_Owned)pt); // expected-error {{invalid cast to `void * _Owned` of not all moved value: `pt`, *pt is _Owned}}
}

_Safe void test_normal_struct_move2(Test* _Owned pt) {
    Test tmp = *pt;
    safe_free((void *_Owned)pt);
}

_Safe void test_normal_struct(void) {
    Test t = {.t = safe_malloc(1)};
    Test *_Owned pt = safe_malloc(t);

    int *_Owned elem = pt->t;

    test_normal_struct_move1(pt); // expected-error {{use of partially moved value: `pt`, pt.t is moved}}
    safe_free((void* _Owned)elem);
}

int main() {
    return 0;
}